--- a/Semana 6/house-prices-advanced-regression-techniques/taller_resuelto.ipynb
+++ b/Semana 6/house-prices-advanced-regression-techniques/taller_resuelto.ipynb
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "28614ac8",
    "metadata": {},
    "outputs": [
@@ -1080,15 +1080,8 @@
    ],
    "source": [
     "\n",
-    "# ===============================================================\n",
-    "# Feature engineering y selección de variables para regresión lineal múltiple\n",
-    "# ===============================================================\n",
     "\n",
     "working = df.copy()\n",
-    "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 1️⃣ Conversión de categóricas a códigos para correlación\n",
-    "# ---------------------------------------------------------------\n",
     "tmp = working.copy()\n",
     "for col in tmp.columns:\n",
     "    if tmp[col].dtype == 'object' or str(tmp[col].dtype).startswith('category'):\n",
@@ -1104,9 +1097,6 @@
     "\n",
     "print('Top numéricas según correlación con SalePrice:', top_num)\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 2️⃣ Seleccionar categóricas de baja cardinalidad\n",
-    "# ---------------------------------------------------------------\n",
     "cat_cols = working.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "if len(cat_cols) > 0:\n",
     "    cat_card = {c: working[c].nunique() for c in cat_cols}\n",
@@ -1116,9 +1106,6 @@
     "\n",
     "print('Categorías seleccionadas (por baja cardinalidad):', top_cat)\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 3️⃣ Construir X e y\n",
-    "# ---------------------------------------------------------------\n",
     "# Evitar duplicados en las columnas seleccionadas\n",
     "features = list(dict.fromkeys([f for f in (top_num + top_cat) if f in working.columns]))\n",
     "X = working[features].copy()\n",
@@ -1126,17 +1113,11 @@
     "\n",
     "print(f\"Total de features seleccionadas: {len(features)}\")\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 4️⃣ Separar numéricas y categóricas correctamente\n",
-    "# ---------------------------------------------------------------\n",
     "numeric_features = X.select_dtypes(include=[np.number]).columns.tolist()\n",
     "categorical_features = [c for c in X.columns if c not in numeric_features]\n",
     "\n",
     "print(f\"Columnas numéricas: {len(numeric_features)} | categóricas: {len(categorical_features)}\")\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 5️⃣ Pipelines de transformación\n",
-    "# ---------------------------------------------------------------\n",
     "numeric_transformer = Pipeline(steps=[('scaler', StandardScaler())])\n",
     "\n",
     "# Compatibilidad con distintas versiones de scikit-learn\n",
@@ -1149,32 +1130,24 @@
     "        ('onehot', OneHotEncoder(handle_unknown='ignore', sparse=False))\n",
     "    ])\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 6️⃣ ColumnTransformer para aplicar transformaciones\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "preprocessor = ColumnTransformer(transformers=[\n",
     "    ('num', numeric_transformer, numeric_features),\n",
     "    ('cat', categorical_transformer, categorical_features)\n",
     "])\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 7️⃣ Pipeline completo con SelectKBest (selección de variables)\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "pipeline = Pipeline(steps=[\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('select', SelectKBest(score_func=f_regression, k=min(40, max(5, len(features)//2))))\n",
     "])\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 8️⃣ Aplicar pipeline al set de entrenamiento\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "X_processed = pipeline.fit_transform(X, y)\n",
     "print('✅ Transformación completada con éxito')\n",
     "print('Forma final de X_processed:', X_processed.shape)\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 9️⃣ Validación de columnas finales\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "if X_processed.shape[1] == 0:\n",
     "    print(\"⚠️ Atención: no se seleccionaron variables numéricas útiles. Revisa las correlaciones o reduce el umbral de selección.\")\n",
     "else:\n",
@@ -1184,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3a7ad4ec",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1175,7 @@
    ],
    "source": [
     "\n",
-    "# Entrenamiento: Regresión Lineal Múltiple (solo LinearRegression)\n",
+    "# Entrenamiento: Regresión Lineal Múltiple \n",
     "model = LinearRegression()\n",
     "\n",
     "# Validación cruzada\n",
@@ -1216,14 +1189,14 @@
     "print('CV MAE:  ', mae_scores.mean(), '±', mae_scores.std())\n",
     "print('CV R2:   ', r2_scores.mean(), '±', r2_scores.std())\n",
     "\n",
-    "# Fit final on all training data\n",
+    "\n",
     "model.fit(X_processed, y)\n",
     "print('\\nModelo entrenado sobre todo el set de entrenamiento.')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "da71ca4a",
    "metadata": {},
    "outputs": [
@@ -1372,42 +1345,37 @@
     }
    ],
    "source": [
-    "# ===============================================================\n",
-    "# 📦 Preparar test y generar predicciones finales (versión con imputación)\n",
-    "# ===============================================================\n",
+    "\n",
     "\n",
     "from sklearn.exceptions import NotFittedError\n",
     "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "# 1️⃣ Copiar el dataset de prueba original\n",
+    "\n",
     "test_proc = test.copy()\n",
     "\n",
-    "# 2️⃣ Verificar que el pipeline esté entrenado\n",
     "try:\n",
     "    _ = pipeline.named_steps['select']\n",
     "except (AttributeError, NotFittedError):\n",
     "    raise RuntimeError(\"⚠️ El pipeline no ha sido entrenado. Ejecuta las celdas de entrenamiento antes de esta.\")\n",
     "\n",
-    "# 3️⃣ Asegurar que las columnas seleccionadas existan en el test\n",
+    "\n",
     "for col in features:\n",
     "    if col not in test_proc.columns:\n",
     "        print(f\"⚠️ Columna faltante en test: {col} — será creada con NaN\")\n",
     "        test_proc[col] = np.nan\n",
     "\n",
-    "# 4️⃣ Asegurar que las categóricas existan\n",
+    "\n",
     "for c in categorical_features:\n",
     "    if c not in test_proc.columns:\n",
     "        print(f\"⚠️ Columna categórica faltante en test: {c} — será creada con 'Missing'\")\n",
     "        test_proc[c] = 'Missing'\n",
     "\n",
-    "# 5️⃣ Construir X_test con las mismas columnas y orden\n",
+    "\n",
     "test_X = test_proc[features].copy()\n",
     "\n",
     "print(f\"✅ Conjunto de prueba listo: {test_X.shape[0]} filas, {test_X.shape[1]} columnas\")\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 🧩 6️⃣ Imputar valores faltantes ANTES de pasar al pipeline\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "num_imputer = SimpleImputer(strategy='median')\n",
     "cat_imputer = SimpleImputer(strategy='most_frequent')\n",
     "\n",
@@ -1423,43 +1391,31 @@
     "\n",
     "print(\"✅ Imputación de valores faltantes completada correctamente\")\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 7️⃣ Aplicar el pipeline completo\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "X_test_processed = pipeline.transform(test_X)\n",
     "\n",
     "print(\"✅ Transformación del test completada correctamente\")\n",
     "print('Forma final del test procesado:', X_test_processed.shape)\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 8️⃣ Generar predicciones con el modelo\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "preds = model.predict(X_test_processed)\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 9️⃣ Crear DataFrame de salida\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "if 'Id' in test.columns:\n",
     "    submission = pd.DataFrame({'Id': test['Id'], 'SalePrice': preds})\n",
     "else:\n",
     "    submission = pd.DataFrame({'SalePrice': preds})\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 🔟 Guardar el archivo CSV con las predicciones\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "submission.to_csv('predicciones.csv', index=False)\n",
     "print(\"✅ Archivo 'predicciones.csv' guardado con éxito en predicciones.csv\")\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 🔢 Mostrar primeras filas y estadísticas\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "display(submission.head(10))\n",
     "print(\"\\n📊 Estadísticas básicas de predicciones:\")\n",
     "display(submission['SalePrice'].describe())\n",
     "\n",
-    "# ---------------------------------------------------------------\n",
-    "# 🎨 Graficar la distribución de los precios predichos\n",
-    "# ---------------------------------------------------------------\n",
+    "\n",
     "plt.figure(figsize=(8,4))\n",
     "plt.hist(submission['SalePrice'], bins=30, color='skyblue', edgecolor='black')\n",
     "plt.title('Distribución de precios predichos', fontsize=14)\n",
