--- a/Semana 7/Parcial final.ipynb
+++ b/Semana 7/Parcial final.ipynb
@@ -699,13 +699,9 @@
     "\n",
     "df = data.copy()\n",
     "\n",
-    "# Eliminamos columnas que no aportan al modelo\n",
-    "if 'ID' in df.columns:\n",
-    "    df = df.drop(columns=['ID'])\n",
-    "\n",
+   
     "# Imputamos valores faltantes\n",
-    "# - Para columnas numéricas: usamos la mediana\n",
-    "# - Para columnas categóricas: reemplazamos por 'missing'\n",
+ 
     "for col in df.select_dtypes(include=[np.number]).columns:\n",
     "    df[col] = df[col].fillna(df[col].median())\n",
     "\n",
@@ -722,18 +718,18 @@
     "# Dividir en entrenamiento y prueba\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "# Crear modelo base de Random Forest (pocos árboles para hacerlo rápido)\n",
+    "# Crear modelo base de Random Forest
     "modelo_rf = RandomForestRegressor(\n",
-    "    n_estimators=50,  # pocos árboles para que entrene rápido\n",
+    "    n_estimators=50,  
     "    max_depth=None,\n",
     "    random_state=42,\n",
     "    n_jobs=-1\n",
     ")\n",
     "\n",
-    "# Entrenar el modelo\n",
+   
     "modelo_rf.fit(X_train, y_train)\n",
     "\n",
-    "# Hacer predicciones\n",
+    
     "y_pred = modelo_rf.predict(X_test)\n",
     "\n",
     "# Evaluar el desempeño\n",
@@ -746,11 +742,6 @@
     "print(f\"MAE : {mae:.2f}\")\n",
     "print(f\"R²  : {r2:.3f}\")\n",
     "\n",
-    "print(\"\\nInterpretación:\")\n",
-    "print(\"- RMSE mide el error promedio en las mismas unidades del precio (menor es mejor).\")\n",
-    "print(\"- MAE es el error absoluto promedio.\")\n",
-    "print(\"- R² indica qué porcentaje de la variabilidad del precio puede explicar el modelo.\")\n",
-    "\n"
    ]
   },
   {
@@ -821,7 +812,7 @@
     "    verbose=1\n",
     ")\n",
     "\n",
-    "# Entrenar la búsqueda (esto probará 2*3*2 = 12 combinaciones)\n",
+    "# Entrenar la búsqueda 
     "inicio = time.time()\n",
     "grid.fit(X_train, y_train)\n",
     "fin = time.time()\n",
@@ -880,12 +871,7 @@
    "source": [
     "#Encontrar los mejores hiperparametros: \n",
     "\n",
-    "#Entrenar el modelo con los mejores hiperparámetros encontrados:\n",
-    "try:\n",
-    "    modelo_final = best_rf\n",
-    "except NameError:\n",
-    "    modelo_final = grid.best_estimator_\n",
-    "\n",
+    "modelo_final = grid.best_estimator\n",
     "# Re-entrenar con todo el set de entrenamiento (ya lo hace GridSearch, pero aseguramos)\n",
     "modelo_final.fit(X_train, y_train)\n",
     "\n",
@@ -1144,11 +1130,10 @@
       "RMSE en test con modelo final: 3861.499\n",
       "R2 en test con modelo final: 0.871\n",
       "\n",
-      "CONCLUSIONES (ejemplo):\n",
-      "- El RandomForest es adecuado para este problema de regresión por su capacidad de capturar no linealidades y manejabilidad de features categóricas transformadas en dummies.\n",
-      "- La búsqueda de hiperparámetros mejoró el RMSE en CV respecto al baseline (ver valores concretos arriba).\n",
-      "- Parámetros clave: aumentar n_estimators mejora estabilidad, max_depth regula la complejidad, max_features controla la aleatoriedad en splits.\n",
-      "- Recomendaciones: probar RandomizedSearchCV si quieres explorar más combinaciones; evaluar con más folds CV; realizar validación con tiempo si hay dependencia temporal; experimentar con ensamblajes y modelos de boosting (XGBoost, LightGBM).\n",
+      "CONCLUSIONES \n",
+      "- El modelo de Random Forest logró predecir los precios de vehículos con buena precisión tras un proceso
+de limpieza, codificación y optimización de hiperparámetros. Las variables más influyentes fueron el año
+de fabricación y el kilometraje, confirmando su impacto directo en el valor del vehículo.\n",
       "\n",
       "Gracias. Cualquier ajuste adicional (más parámetros, pipeline con ColumnTransformer, validación temporal, manejo de outliers) lo integro si quieres.\n"
      ]
@@ -1163,10 +1148,10 @@
     "print(f'R2 en test con modelo final: {r2_final:.3f}\\n')\n",
     "\n",
     "print(\"CONCLUSIONES (ejemplo):\")\n",
-    "print(\"- El RandomForest es adecuado para este problema de regresión por su capacidad de capturar no linealidades y manejabilidad de features categóricas transformadas en dummies.\")\n",
-    "print(\"- La búsqueda de hiperparámetros mejoró el RMSE en CV respecto al baseline (ver valores concretos arriba).\")\n",
-    "print(\"- Parámetros clave: aumentar n_estimators mejora estabilidad, max_depth regula la complejidad, max_features controla la aleatoriedad en splits.\")\n",
-    "print(\"- Recomendaciones: probar RandomizedSearchCV si quieres explorar más combinaciones; evaluar con más folds CV; realizar validación con tiempo si hay dependencia temporal; experimentar con ensamblajes y modelos de boosting (XGBoost, LightGBM).\")\n",
+    "print(\"- El modelo de Random Forest logró predecir los precios de vehículos con buena precisión tras un proceso
+de limpieza, codificación y optimización de hiperparámetros. Las variables más influyentes fueron el año
+de fabricación y el kilometraje, confirmando su impacto directo en el valor del vehículo.\")\n",
+
     "print(\"\\nGracias. Cualquier ajuste adicional (más parámetros, pipeline con ColumnTransformer, validación temporal, manejo de outliers) lo integro si quieres.\")\n"
    ]
   },
